refactor: refatoração da tratativa de error - GlobalExceptionHandler